--- a/src/pages/Questions/Questions.css
+++ b/src/pages/Questions/Questions.css
@@ -6,6 +6,7 @@
 }
 
 .question-details-container{
+    margin-top: 50px;
     margin-bottom: 20px;
     padding-bottom: 20px;
     border-bottom: solid 1px rgba(0, 0, 0, 0.112);
